# Swift-CANyonero

./: .gitignore  CLAUDE.md  CMakeLists.txt  KLINE-INTEGRATION.md  Package.resolved  Package.swift  README.md  idf_component.yml
.claude/: settings.local.json
Sources/Swift-CANyonero/: Helpers.swift  PDU.swift  Protocol.swift
Sources/can-standin/: Cargo.toml  Makefile
Sources/can-standin/src/: main.rs
Sources/ecuconnect-j2534/: CMakeLists.txt  Makefile  README.md  SECURE_BOOT_INSTRUCTIONS.txt
Sources/ecuconnect-j2534-0500/: CMakeLists.txt  README.md
Sources/ecuconnect-j2534-0500/include/: ecuconnect.h  j2534.h
Sources/ecuconnect-j2534-0500/src/: ecuconnect.cpp  ecuconnect.def  j2534_api.cpp
Sources/ecuconnect-j2534/driver/: README.md  connection.c  driver.c  driver.h  ecuconnect_l2cap.inf  ecuconnect_l2cap.vcxproj  public.h  queue.c
Sources/ecuconnect-j2534/include/: canyonero_protocol.h  ecuconnect.h  j2534.h  transport.h
Sources/ecuconnect-j2534/scripts/: LICENSE.txt  build-installer.ps1  driver-util.ps1  install.bat  install.ps1  installer.nsi  j2534-util.ps1  register.reg.template  uninstall.bat  unregister.reg
Sources/ecuconnect-j2534/src/: canyonero_protocol.cpp  dllmain.cpp  ecuconnect.cpp  ecuconnect.def  j2534_api.cpp  transport_ble.cpp  transport_l2cap.cpp  transport_tcp.cpp
Sources/ecuconnect-j2534/test/: build_test.bat  build_test.ps1  check_certs.ps1  test_l2cap_driver.cpp
Sources/ecuconnect-socketcan/: CMakeLists.txt  Makefile  README.md  main.cpp
Sources/ecuconnect-socketcan/scripts/: connect-ecuconnect.sh
Sources/ecuconnect-tool/: Benchmark.swift  Config.swift  ECUconnect.swift  History.swift  Login.swift  Monitor.swift  Ping.swift  Raw.swift  Term.swift  Test.swift  Update.swift
Sources/libCANyonero/: Helpers.cpp  Protocol.cpp  lz4.c
Sources/libCANyonero/include/: CANyonero.hpp  Helpers.hpp  ISOTP.hpp  ISOTPFD.hpp  KLine.hpp  KWP.hpp  Protocol.hpp  TP20.hpp  beeper.h
Tests/ObjC-CANyonero-Tests/: Tests.swift
Tests/Swift-CANyonero-Tests/: Tests.swift
Tests/Swift-CANyoneroTests/: Swift_CANyoneroTests.swift
Tests/libCANyonero-Tests/: Compression.mm  ISOTP-Receive-Invalid-First.mm  ISOTP-Receive-Invalid-Misc.mm  ISOTP-Receive-Invalid-Single.mm  ISOTP-Receive-Valid.mm  ISOTP-Transmit-Valid.mm  ISOTP.mm  PDU.mm
Tests/libCANyonero-Tests/ISOTP/: ISOTP-Defensive.mm  ISOTP-EA-ReceiveValid.mm  ISOTP-FD-Receive.mm  ISOTP-FD-Transmit.mm  ISOTP-Receive-Invalid-First.mm  ISOTP-Receive-Invalid-Misc.mm  ISOTP-Receive-Invalid-Single.mm  ISOTP-Receive-Valid.mm  ISOTP-Transmit-SlightlyOutOfSpec.mm  ISOTP-Transmit-Valid.mm
Tests/libCANyonero-Tests/KLine/: KLine-Frame-Build.mm  KLine-Frame-Split.mm  KLine-Transceiver-ISO9141.mm  KLine-Transceiver-Invalid.mm  KLine-Transceiver-Valid.mm
Tests/libCANyonero-Tests/KWP/: KWP-Transceiver-Invalid.mm  KWP-Transceiver-Valid.mm
Tests/libCANyonero-Tests/TP20/: TP20-Transceiver.mm
python/: .gitignore
python/ecuconnect_tool/: .gitignore  CMakeLists.txt  README.md  _build_backend.py  pyproject.toml
python/ecuconnect_tool/ecuconnect_tool/: __init__.py  cli.py  ecuconnect.py  linux_l2cap.py  macos_l2cap.py  socketcan.py  test_runner.py
python/ecuconnect_tool/scripts/: run_dev.py
python/ecuconnect_tool/src/: canyonero_py.cpp
