[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.11"]
build-backend = "_build_backend"
backend-path = ["."]

[project]
name = "ecuconnect-tool"
version = "0.9.7"
description = "Python ECUconnect CLI and CANyonero protocol bindings"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ECUconnect" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "python-can>=4.2.2",
  "pyobjc-framework-CoreBluetooth>=10.0; platform_system == 'Darwin'",
]

[project.optional-dependencies]
ble-linux = [
  "dbus-python>=1.3.2",
  "PyGObject>=3.42.0",
]

[project.scripts]
ecuconnect-tool = "ecuconnect_tool.cli:app"

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["ecuconnect_tool"]
sdist.exclude = ["build/", "dist/", "*.so"]
sdist.include = ["csrc/*", "csrc/include/*"]
